# notion-to-obsidian-rs

./: .clinerules  .env.example  .gitignore  Cargo.toml  README.md
cases/: test_expected.md
src/: builder.rs  converter.rs  error.rs  lib.rs  main.rs
src/traits/: frontmatter_generator.rs  mod.rs  page_provider.rs  post_processor.rs
tests/: test-convert.rs
tests/cases/: test_expected.md
